Fixed rendering on mobile devices. Added /status page and move new_user emit to after verification.

--- a/client/pages/admin/home/index.less
+++ b/client/pages/admin/home/index.less
@@ -104,8 +104,7 @@
 /*Responsive Stuff*/
 @media all and (max-width: 976px) and (min-width: 768px) {
 	.stats {
-		height: 400px;
-		//width: 600px;
+		height: 650px;
 	}
 	.stats .f {
 		font: normal 100px/200px Arial, Helvetica, sans-serif;
@@ -123,8 +122,7 @@
 }
 @media all and (max-width: 768px) and (min-width: 471px) {
 	.stats {
-		height: 300px;
-		//width: 450px;
+		height: 600px;
 	}
 	.stats .f {
 		font: normal 80px/150px Arial, Helvetica, sans-serif;
@@ -142,20 +140,26 @@
 }
 @media all and (max-width: 470px) and (min-width: 0px) {
 	.stats {
-		height: 200px;
-		//width: 300px;
+		height: 700px;
+	}
+	.stats .card {
+		width: 50%;
+		height: 25%;
+	}
+	.stats .card.wide {
+		width: 100%;
 	}
 	.stats .f {
 		font: normal 60px/100px Arial, Helvetica, sans-serif;
 	}
     .stats .f .description {
-        font-size: 12px;
-        line-height: 14px;
+        font-size: 14px;
+        line-height: 18px;
     }
     .stats .f .contentbox {
-        font-size: 22px;
+        font-size: 28px;
     }
 	.stats .f .contentbox.small {
-		font-size: 12px;
+		font-size: 14px;
 	}
 }
